# tfr9

./: .gitignore  Makefile  NOTES  README.md  TODO  go.mod  go.sum
console/: console.go
firmware/: H.1  a1.py  boot.py  grok_output.py  main.py  os9level1.py  os9level1v2.py  poc905.py  poc905_inc_dir.py
firmware/c/: CMakeLists.txt  H.1  H.2minicom  H.3join  H.4nos  H.5.borges.join  H.6.boot.rom.h  boot.disk.h  boot.rom.h  generate-bootrom-header.py  tfr901main.cpp  yksi.pio
listings/: listings.go  lsmod.go
listings/join/: join.go
listings/lsmod/: lsmod.go
listings/modsrc/: modsrc.go
nitros9/: Makefile  boot.rom-1  console_tfr901.asm  create-dd.sh  disker_tfr901.asm  generate-boot-rom.sh  term_tfr901.asm  tfrblock_tfr901.asm
talks/2024-01-virtual-tandy/: 0.html  Makefile  markup.go  talk.md
talks/2024-01-virtual-tandy/code/: bigram.code  pio.code  reset.code  smallram.code  t1  t2  t3  trace-level2.txt  transcript-level2.txt
tfr901g/: LICENSE.previous  tfr901g.kicad_pcb  tfr901g.kicad_prl  tfr901g.kicad_pro  tfr901g.kicad_sch
tfr903d/: tfr903d-JLC-BOM.csv  tfr903d.kicad_pcb  tfr903d.kicad_prl  tfr903d.kicad_pro  tfr903d.kicad_sch  tfr903d.positions.csv
tfr903d/Gerbers/: tfr903d-B_Adhesive.gba  tfr903d-B_Cu.gbl  tfr903d-B_Fab.gbr  tfr903d-B_Mask.gbs  tfr903d-B_Paste.gbp  tfr903d-B_Silkscreen.gbo  tfr903d-Edge_Cuts.gm1  tfr903d-F_Adhesive.gta  tfr903d-F_Cu.gtl  tfr903d-F_Fab.gbr  tfr903d-F_Mask.gts  tfr903d-F_Paste.gtp  tfr903d-F_Silkscreen.gto  tfr903d-In1_Cu.g2  tfr903d-In2_Cu.g3  tfr903d-NPTH.drl  tfr903d-PTH.drl
tfr903f/: tfr903f-JLC-BOM.csv  tfr903f-top-pos.csv  tfr903f.kicad_pcb  tfr903f.kicad_prl  tfr903f.kicad_pro  tfr903f.kicad_sch
tfr905g/: README.md  busdrivers.kicad_sch  tfr905g-JLC-BOM.csv  tfr905g.kicad_pcb  tfr905g.kicad_prl  tfr905g.kicad_pro  tfr905g.kicad_sch
tfr905h/: LICENSE  README.md  busdrivers.kicad_sch  tfr905_ricku_botC.stl  tfr905_ricku_topE.stl  tfr905h.kicad_pcb  tfr905h.kicad_prl  tfr905h.kicad_pro  tfr905h.kicad_sch  tfr905h_cpl_top.csv
v2/: H.5  H.6  H.61  Makefile  README.md  binary-header-generator.py  create-dd.sh  make-and-run-level1.sh  make-and-run-level2-905-pico2.sh  make-and-run-level2-905.sh  make-and-run-level2.sh  rpc-compiler.py  rpc.txt  tfr9ports.py  with-level1.create  with-level1.ports  with-level2.create  with-level2.ports
v2/demo/blink/: CMakeLists.txt
v2/demo/picow_blink/: CMakeLists.txt
v2/doc/: README.md
v2/hasty-2025-05-28/: README
v2/listings/: H.1  HOW.borges
v2/listings/join/: join.go
v2/listings/lsmod/: lsmod.go
v2/listings/modsrc/: modsrc.go
v2/n9drivers/: Makefile  boot-rom-maker.sh  boot-two-maker-level2.sh  console_tfr901.asm  dd_tfrblock.asm  init_tfr901.asm  level1prelude.asm  sc6850.asm  term_sc6850.asm  term_tfr901.asm  tfrblock_tfr901.asm
v2/os9api/: os9api.go  os9err.go
v2/tconsole/: H.1  H.2  H.3  Makefile  tconsole.go
v2/tmanager/: CMakeLists.txt  buffer.h  tmanager.cpp  tpio.pio
v2/tmanager901/: CMakeLists.txt  tmanager.cpp
v2/tmanager903/: CMakeLists.txt  ram.inc.h  tmanager.cpp  tpio.pio
v2/tmanager905/: CMakeLists.txt  Makefile  old-tmanager.cpp  ram.inc.h  tmanager.cpp  tpio.pio  z.cpp
v2/tmanager905-pico2/: CMakeLists.txt  latch.pio  tmanager.cpp  tpio.pio  tpio.pio--old-1.3048  tpio.pio-good-0.8448
v2/tmanager905-pico2/0.537755/: CMakeLists.txt  ram.inc.h  tmanager.cpp  tpio.pio
v2/tmanager905-pico2/0.8448/: CMakeLists.txt
v2/tmanager905/0.9355/: tmanager.cpp
v2/wifi-scanner/: CMakeLists.txt  scanner.cpp
v3/: Makefile  README.md  create-nitros9disk.sh  make-all-905-both_1_2.sh  make-all-905-pico2.sh  make-and-run-level1.sh  make-level1-905-pico2.sh  make-level2-905-pico2.sh  make-turbo9sim-905-pico2.sh  make-turbos9sim-905-pico2.sh  rmake.tcl
v3/OLD/: make-all-905-pico2.sh  make-level1-905-pico2.sh  make-level2-905-pico2.sh  make-turbo9sim-905-pico2.sh  rmake-uno.tcl
v3/apps/: Makefile  app-t9sim.h  count.c  t9sim.h
v3/apps-metal-asm/: Makefile  README.md  ditto-g12-g19-even-in-odd-out.asm  hello.asm  inputs-g12-g19.asm
v3/apps-metal-gcc/: Makefile  count.c  count.decb.script  random.c  types.h
v3/borges-saver/: borges-saver.go
v3/demos-metal-asm/: Makefile  README.md  blink.asm  count-g12-g19.asm  display.asm  inputs-g12-g19.asm
v3/demos-metal-gcc/: Makefile  app-t9sim.h
v3/doc/: README.runtime-bundle-2025-07-14.md  README.runtime-bundle-2025-07-29.md
v3/launchers/: Makefile  launch-2500-to-2602.asm  launch-level1.asm
v3/misc/uf2-explain/: uf2-explain.go
v3/n9cmds/: Makefile  hypercmd.asm  tfr9cmd.asm  tfr9log.asm
v3/n9recipe/: rmake.tcl
v3/patches/: github-nitros9project-nitros9-162.patch
v3/tconsole/: atoi.go  defs_level1.go  defs_level2.go  defs_noos.go  disk.go  event.go  gloss.go  listings.go  load.go  open_darwin.go  open_freebsd.go  open_linux.go  open_windows.go  os9.go  os9_level1.go  os9_level2.go  os9api.go  os9err.go  ram.go  ram_coco1.go  ram_coco3.go  ram_old.go  serial.LICENSE  serial.go  source.go  tconsole.go  utility.go
v3/tmanager905/: acia.h  benchmark-cycles.h  circbuf.h  cocosdc.h  emudsk.h  event.h  gime.h  hyper.h  level2.rom.h  log.h  logging.h  nitros9level1.h  nitros9level2.h  pcrange.h  pico-io.h  picotimer.h  ram.h  ram.inc.h  reboot.h  samvdg.h  seen.h  ssd1306.h  tfr9ports.gen.h  tmanager.h  tmanager.hpp  trace.h  turbo9os.h  turbo9os.rom.h  turbo9sim.h  turbo9sim.rom.h
v3/tmanager905/demos-metal/: Makefile
v3/tmanager905/pico1/: CMakeLists.txt  tmanager.cpp
v3/tmanager905/pico2/: CMakeLists.txt  tmanager.cpp
v3/tmanager905/pico2/pico-ssd1306/: COPIED-FROM-GITHUB
